# privdesk

./: .gitignore  README.md
.github/workflows/: build-mac.yml
client/privdesk-app/: package-lock.json  package.json
client/privdesk-app/src/: app.js  index.html  styles.css
client/privdesk-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
client/privdesk-app/src-tauri/capabilities/: default.json
client/privdesk-app/src-tauri/icons/: icon.icns
client/privdesk-app/src-tauri/src/: lib.rs  main.rs
server/: 安装说明-先看我.txt
server/privdesk-server-installer/: README.txt  gen-code.sh  install.sh  uninstall.sh
发布/: Mac端使用说明.txt  PrivDesk使用说明书.txt  快速开始.txt  打包Mac.sh  项目维护备忘.txt
发布/客户端/: PrivDesk_证书.cer
